form and banner changes

--- a/index.html
+++ b/index.html
@@ -164,50 +164,11 @@
                     </select>
                     <span class="error"></span>
                   </div>
-                  <div class="form-group my-2">
-                    <select name="tests" id="tests" class="tests" required>
-                      <option value="Select Test" default>Select Tests</option>
-                      <option value="Complete Blood Count (CBC)">Complete Blood Count (CBC)</option>
-                      <option value=" Liver Function Test (LFT)"> Liver Function Test (LFT)</option>
-                      <option  value="Gamma Glutamyl Transferase(GGT)">Gamma Glutamyl Transferase(GGT)</option>
-                      <option  value="Amylase-Serum">Amylase-Serum</option>
-                      <option  value="H Pylori Antibody">H Pylori Antibody</option>
-                      <option value="Tissue Transglutaminase Antibody - IgG">Tissue Transglutaminase Antibody - IgG</option>
-                      <option value="IgG (Total)">IgG (Total)</option>
-                    </select>
-                    <span class="error"></span>
-                  </div>
                   <div class="CTA">
                     <input type="submit" value="Signup Now" id="submit">
                   </div>
                 </form>
               </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section class="gut-health">
-      <div class="container">
-        <div class="row justify-content-center align-items-center">
-          <div class="col-lg-7">
-            <div class="image-wrapper">
-            </div>
-          </div>
-          <div class="col-lg-5">
-            <div class="package-wrapper">
-              <div class="title">
-                <h6>Common <span>Symptoms</span> of an Unhealthy Gut</h6>
-              </div>
-              <ul class="ps-3">
-                <li><p>Complete Blood Count (CBC)</p></li>
-                 <li><p>Liver Function Test (LFT)</p></li>
-                 <li><p>Gamma Glutamyl Transferase(GGT)</p></li>
-                 <li><p>Amylase-Serum</p></li>
-                 <li><p>H Pylori Antibody</p></li>
-                 <li><p>Tissue Transglutaminase Antibody - IgG</p></li>
-                 <li><p>IgG (Total)</p></li>
-              </ul>
             </div>
           </div>
         </div>
@@ -269,6 +230,32 @@
                 <h6>Free Tele-consultation</h6>
                 <p>With Doctors</p>
               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="gut-health">
+      <div class="container">
+        <div class="row justify-content-center align-items-center">
+          <div class="col-lg-7 col-md-6">
+            <div class="image-wrapper">
+            </div>
+          </div>
+          <div class="col-lg-5 col-md-6">
+            <div class="package-wrapper">
+              <div class="title">
+                <h6>Total <span>Gut Health</span> Screening</h6>
+              </div>
+              <ul class="ps-3">
+                <li><p>Complete Blood Count (CBC)</p></li>
+                 <li><p>Liver Function Test (LFT)</p></li>
+                 <li><p>Gamma Glutamyl Transferase(GGT)</p></li>
+                 <li><p>Amylase-Serum</p></li>
+                 <li><p>H Pylori Antibody</p></li>
+                 <li><p>Tissue Transglutaminase Antibody - IgG</p></li>
+                 <li><p>IgG (Total)</p></li>
+              </ul>
             </div>
           </div>
         </div>
@@ -873,19 +860,6 @@
                     </select>
                     <span class="error"></span>
                   </div>
-                  <div class="form-group my-2">
-                    <select name="tests" id="tests" class="tests" required>
-                      <option value="Select Test" default>Select Tests</option>
-                      <option value="Complete Blood Count (CBC)">Complete Blood Count (CBC)</option>
-                      <option value=" Liver Function Test (LFT)"> Liver Function Test (LFT)</option>
-                      <option  value="Gamma Glutamyl Transferase(GGT)">Gamma Glutamyl Transferase(GGT)</option>
-                      <option  value="Amylase-Serum">Amylase-Serum</option>
-                      <option  value="H Pylori Antibody">H Pylori Antibody</option>
-                      <option value="Tissue Transglutaminase Antibody - IgG">Tissue Transglutaminase Antibody - IgG</option>
-                      <option value="IgG (Total)">IgG (Total)</option>
-                    </select>
-                    <span class="error"></span>
-                  </div>
                   <div class="CTA">
                     <input type="submit" value="Signup Now" id="submit">
                   </div>
@@ -1008,19 +982,6 @@
                           <option value="Ghansoli">Ghansoli</option>
                           <option value="Rabale">Rabale</option>
                           <option value="Airoli">Airoli</option>
-                        </select>
-                        <span class="error"></span>
-                      </div>
-                      <div class="form-group my-2">
-                        <select name="tests" id="tests" class="tests" required>
-                          <option value="Select Test" default>Select Tests</option>
-                          <option value="Complete Blood Count (CBC)">Complete Blood Count (CBC)</option>
-                          <option value=" Liver Function Test (LFT)"> Liver Function Test (LFT)</option>
-                          <option  value="Gamma Glutamyl Transferase(GGT)">Gamma Glutamyl Transferase(GGT)</option>
-                          <option  value="Amylase-Serum">Amylase-Serum</option>
-                          <option  value="H Pylori Antibody">H Pylori Antibody</option>
-                          <option value="Tissue Transglutaminase Antibody - IgG">Tissue Transglutaminase Antibody - IgG</option>
-                          <option value="IgG (Total)">IgG (Total)</option>
                         </select>
                         <span class="error"></span>
                       </div>
