gut health title new

--- a/index.html
+++ b/index.html
@@ -238,11 +238,14 @@
     <section class="gut-health">
       <div class="container">
         <div class="row justify-content-center align-items-center">
-          <div class="col-lg-7 col-md-6">
+          <div class="col-lg-7">
+            <div class="main-title text-center">
+              <h6>Common <span>Symptoms</span> Of an Unhealthy Gut</h6>
+            </div>
             <div class="image-wrapper">
             </div>
           </div>
-          <div class="col-lg-5 col-md-6">
+          <div class="col-lg-5">
             <div class="package-wrapper">
               <div class="title">
                 <h6>Total <span>Gut Health</span> Screening</h6>
